Category widths on mobile and filter widths on desktop fixed.

--- a/static/css/sifter-desktop.css
+++ b/static/css/sifter-desktop.css
@@ -153,15 +153,16 @@ html,body
   /* Filter Buttons */
   .sifter-filters
   {
-    width: 400px;
+    width: 375px;
     font-size: 110%;
   }
   .sifter-filters button
   {
     width: 150px;
-    margin: 10px 20px;
+    margin-top: 1em;
+    margin-left: 1em;
     color: #cf2037;
-    padding: 5px;
+    padding: 0.25em;
   }
 
 
@@ -169,15 +170,24 @@ html,body
   .sifter-categories
   {
     width: 600px;
-    margin: 20px;
-    margin-left: -20px;
+    font-size: 0.8em;
+    margin: 1em;
+    margin-left: 0;
   }
-  .sifter-categories div
+  .sifter-categories .sifter-category 
   {
-    width: 200px;
     display: inline-block;
+    padding: 0.25em 0;
+    margin-bottom: 1em;
+    width: 180px;
+    overflow: hidden;
     list-style: none;
     color: #cf2037;
+  }
+  .sifter-category span
+  {
+    font-size: 2.75em;
+    vertical-align: middle;
   }
 
   .desktop-search
